sandbox/output
StringCalculatorTest.java:8: error: incompatible types: String cannot be converted to int
        int input = "";
                    ^
StringCalculatorTest.java:10: error: incompatible types: int cannot be converted to String
        int actual = StringCalculator.add(input);
                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
